--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,34 +5,95 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="孙杰"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
 
-        </activity>
-        <activity android:name=".Ch10Activity1" >
-
-        </activity>
-
-        <activity android:name=".Ch10Activity2" >
+        <activity android:name=".Ch10Activity1">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.inspur.action2" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data
+                    android:host="inspur.com"
+                    android:scheme="abc" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".Ch10Activity2" />
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
             android:exported="true">
+
             <intent-filter>
-                <action android:name="com.inspur.broadcast"></action>
+
+                <action android:name="com.inspur.broadcast" />
+
             </intent-filter>
+
         </receiver>
 
+
+
+        <activity android:name=".Ch10Activity3" />
+
+
+
+        <service
+
+            android:name=".MyService"
+
+            android:enabled="true"
+
+            android:exported="true" />
+
+
+
+        <activity android:name=".Ch12Activity1"></activity>
+
+
+
+        <service
+
+            android:name=".MyService2"
+
+            android:enabled="true"
+
+            android:exported="true" />
+
+        <service
+
+            android:name=".MediaService"
+
+            android:enabled="true"
+
+            android:exported="true" />
+
+
+
+        <activity android:name=".Ch12Activity2">
+
+
+
+        </activity>
+
+        <activity android:name=".Ch13Activity1">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN" />
+
+
+
+                <category android:name="android.intent.category.LAUNCHER" />
+
+            </intent-filter>
+
+        </activity>
+
     </application>
+
+
 
 </manifest>
