--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,90 +10,58 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" />
-
         <activity android:name=".Ch10Activity1">
             <intent-filter>
                 <action android:name="com.inspur.action2" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data
                     android:host="inspur.com"
                     android:scheme="abc" />
             </intent-filter>
         </activity>
         <activity android:name=".Ch10Activity2" />
+
         <receiver
             android:name=".MyReceiver"
             android:enabled="true"
             android:exported="true">
-
             <intent-filter>
-
                 <action android:name="com.inspur.broadcast" />
-
             </intent-filter>
-
         </receiver>
-
-
 
         <activity android:name=".Ch10Activity3" />
 
-
-
         <service
-
             android:name=".MyService"
-
             android:enabled="true"
-
             android:exported="true" />
 
-
-
-        <activity android:name=".Ch12Activity1"></activity>
-
-
+        <activity android:name=".Ch12Activity1" />
 
         <service
-
             android:name=".MyService2"
-
             android:enabled="true"
-
             android:exported="true" />
-
         <service
-
             android:name=".MediaService"
-
             android:enabled="true"
-
             android:exported="true" />
 
-
-
-        <activity android:name=".Ch12Activity2">
-
-
-
-        </activity>
-
+        <activity android:name=".Ch12Activity2" />
         <activity android:name=".Ch13Activity1">
-
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
-
-
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
-
         </activity>
-
+        <activity android:name=".Ch14Activity1" />
+        <activity android:name=".Ch15Activity1" />
+        <activity android:name=".MyOpenHelper" />
+        <activity android:name=".MyContentProvider"></activity>
     </application>
-
-
 
 </manifest>
